# tunez-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  example-config.toml  example-plugin.sh  music
.github/: FUNDING.yml  copilot-instructions.md
.github/instructions/: provider-development.instructions.md  ratatui-tui.instructions.md  spec-driven-workflow-v1.instructions.md
docs/: IMPLEMENTATION_SUMMARY.md  filesystem-provider-prd.md  melodee-api-v1.json  melodee-provider-prd.md  tunez-design.md  tunez-phase2-review.md  tunez-phase3-review.md  tunez-requirements-review-glm47.md  tunez-requirements-review-grok.md  tunez-requirements-review-qwen.md  tunez-requirements-review.md  tunez-requirements.md  tunez-tui-mockups.md  tunz-requirments-phase1-1.md
src/providers/filesystem-provider/: Cargo.toml
src/providers/filesystem-provider/src/: cache.rs  lib.rs  scan.rs  tags.rs
src/providers/melodee-provider/: Cargo.toml
src/providers/melodee-provider/src/: lib.rs  mapping.rs  models.rs
src/scrobblers/melodee-scrobbler/: Cargo.toml
src/scrobblers/melodee-scrobbler/src/: lib.rs
src/scrobblers/melodee-scrobbler/tests/: contract.rs
src/tunez-audio/: Cargo.toml
src/tunez-audio/src/: engine.rs  lib.rs  real.rs
src/tunez-cli/: Cargo.toml
src/tunez-cli/src/: main.rs
src/tunez-core/: Cargo.toml
src/tunez-core/src/: cache.rs  config.rs  lib.rs  logging.rs  models.rs  paths.rs  provider.rs  provider_contract.rs  redact.rs  scrobbler.rs  secrets.rs
src/tunez-player/: Cargo.toml
src/tunez-player/src/: lib.rs  player.rs  queue.rs  queue_persistence.rs  scrobbler_integration.rs
src/tunez-plugin/: Cargo.toml
src/tunez-plugin/src/: adapter.rs  host.rs  lib.rs  protocol.rs
src/tunez-ui/: Cargo.toml
src/tunez-ui/src/: app.rs  help.rs  lib.rs  theme.rs
src/tunez-ui/src/help/: help.md
src/tunez-viz/: Cargo.toml
src/tunez-viz/src/: lib.rs
