[workspace]
members = [
    "src/tunez-core",
    "src/tunez-cli",
    "src/tunez-ui",
    "src/tunez-audio",
    "src/tunez-player",
    "src/providers/filesystem-provider",
    "src/providers/melodee-provider",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Tunez Contributors"]
readme = "README.md"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5"
keyring = "3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter"] }
tracing-appender = "0.2"
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
rand = "0.8"
