[package]
name = "tunez-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "tunez"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { workspace = true }
thiserror = { workspace = true }
tunez-core = { path = "../tunez-core" }
tunez-ui = { path = "../tunez-ui" }
tunez-player = { path = "../tunez-player" }
tunez-audio = { path = "../tunez-audio" }
tunez-plugin = { path = "../tunez-plugin" }
filesystem-provider = { path = "../providers/filesystem-provider" }
melodee-provider = { path = "../providers/melodee-provider" }
melodee-scrobbler = { path = "../scrobblers/melodee-scrobbler" }
tracing = { workspace = true }
