[package]
name = "tunez-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
directories = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[dev-dependencies]
tempfile = "3"
