[package]
name = "tunez-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
directories = { workspace = true }
keyring = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
