[package]
name = "tunez-player"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
tunez-core = { path = "../tunez-core" }
tunez-audio = { path = "../tunez-audio" }

[dev-dependencies]
itertools = "0.13"
tempfile = "3"
