[package]
name = "tunez-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "External plugin host for Tunez music player"

[dependencies]
tunez-core = { path = "../tunez-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
