[package]
name = "tunez-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
crossterm = { workspace = true }
ratatui = { workspace = true }
thiserror = { workspace = true }
tunez-core = { path = "../tunez-core" }
tunez-player = { path = "../tunez-player" }
tunez-audio = { path = "../tunez-audio" }
