[package]
name = "tunez-viz"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
tunez-core = { path = "../tunez-core" }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
rustfft = "6.1"