[package]
name = "melodee-provider"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
url = "2"
tunez-core = { path = "../../tunez-core" }

[dev-dependencies]
wiremock = "0.5"
tempfile = "3"
