[package]
name = "melodee-provider"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip", "brotli", "deflate"] }
url = "2"
tunez-core = { path = "../../tunez-core" }

[dev-dependencies]
wiremock = "0.5"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
