[package]
name = "melodee-scrobbler"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tunez-core = { path = "../../tunez-core" }
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"
thiserror = { workspace = true }
